# moltbot

./: .gitignore  CHANGELOG.md  package.json  pnpm-lock.yaml  start_bot.bat
.agent/workflows/: build-rust-skill.md
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md
.github/: FUNDING.yml
.github/issues/: cli-token-auto-discovery.md
apps/flutter_client/: pubspec.yaml
docs/concepts/: context-management.md
docs/providers/: cli-token-discovery.md
extensions/cli-token-discovery/: README.md  index.ts  openclaw.plugin.json  package.json
extensions/user-notifier/: index.ts  openclaw.plugin.json  package.json
scripts/: bundle-a2ui.js  debug-skills.ts
skills/1password/: SKILL.md
skills/admin-assistant/: SKILL.md
skills/antigravity/: README.md  SKILL.md  __init__.py  antigravity.ps1  antigravity.sh  antigravity_auto_responder.py  antigravity_hotkeys.py  antigravity_manager.py  changelog.md  config.json  quick_launch.py  safe_control_manager.py  start_safe_antigravity_system.py  test_fix.py  test_visual_notification.py  visual_notifier.py  windows_notification_handler.py
skills/cloudflare/: SKILL.md
skills/coding-agent/: SKILL.md
skills/context-manager/: SKILL.md
skills/copilot/: SKILL.md
skills/desktop-automation/: SKILL.md
skills/git/: SKILL.md
skills/github/: SKILL.md
skills/gui_control/: README.md  SKILL.md  __init__.py  config.json  demo_integration.py  element_finder.py  gui_controller.py  screenshot_analyzer.py  send_whatsapp_message.py  test_gui_control.py  (+1 more)
skills/rust-desktop/: Cargo.toml  SKILL.md
skills/rust-desktop/src/: main.rs
(+94 files in other folders)
